| Bug #46243 | --initial does not clear disk data files although filesystemDD is set | ||
|---|---|---|---|
| Submitted: | 16 Jul 2009 20:54 | Modified: | 4 Aug 2009 12:33 |
| Reporter: | Johan Andersson | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Disk Data | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-* | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
| Tags: | configuration, disk data | ||
[16 Jul 2009 20:54]
Johan Andersson
[3 Aug 2009 12:11]
Jonas Oreland
problem was that FileSystemPath[DD/DataFiles/UndoFiles] was not cleared *iff* it was equal to FileSystemPath (i.e had identical value) the patch fixes this problem...
[3 Aug 2009 12:22]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/79875 2959 Jonas Oreland 2009-08-03 ndb - bug#46243 Fix so that FileSystmPath[DD/DataFiles/UndoFiles] is cleared even if they have identical value as FileSystemPath
[3 Aug 2009 16:12]
Bugs System
Pushed into 5.1.35-ndb-6.2.19 (revid:jonas@mysql.com-20090803121942-7mw80cjg2kdr02j0) (version source revid:jonas@mysql.com-20090803121942-7mw80cjg2kdr02j0) (merge vers: 5.1.35-ndb-6.2.19) (pib:11)
[3 Aug 2009 16:12]
Bugs System
Pushed into 5.1.35-ndb-6.3.26 (revid:jonas@mysql.com-20090803130332-pesbastqnj76b1is) (version source revid:jonas@mysql.com-20090803130332-pesbastqnj76b1is) (merge vers: 5.1.35-ndb-6.3.26) (pib:11)
[3 Aug 2009 16:13]
Bugs System
Pushed into 5.1.35-ndb-7.0.7 (revid:jonas@mysql.com-20090803153854-un8jv9y2md8k221t) (version source revid:jonas@mysql.com-20090803153854-un8jv9y2md8k221t) (merge vers: 5.1.35-ndb-7.0.7) (pib:11)
[3 Aug 2009 16:47]
Johan Andersson
Hi, tested that it works.. and it did. Thanks!
[4 Aug 2009 12:33]
Jon Stephens
Documented bugfix in the NDB-6.2.19, 6.3.26, and 7.0.7 changelogs as follows:
If the value set in the config.ini file for FileSystemPathDD,
FileSystemPathDataFiles, or FileSystemPathUndoFiles was
identical to the value set for FileSystemPath, that parameter
was ignored when starting a data node with --initial. As a
result, the Disk Data files in the corresponding directory were
not removed when performing an initial start of the affected
data node or data nodes.
