ndb - bug#46243   Fix so that FileSystmPath[DD/DataFiles/UndoFiles] is cleared   even if they have identical value as FileSystemPath